# tooling-project-assets

./: .codespellrc  .ecrc  .eslintrc.yml  .flake8  .gitignore  .markdown-link-check.json  .markdownlintignore  .prettierignore  .yamllint.yml  README.md  Taskfile.yml  go.mod  go.sum  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: check-ci-sync.yml  check-clang-format.yml  check-community-health-sync.yml  check-config-sync.yml  check-configs.yml  check-dependabot-sync.yml  check-dependabot.yml  check-eslint.yml  check-files-task.yml  check-general-formatting-task.yml  check-issue-templates.yml  check-javascript-task.yml  check-labels.yml  check-license.yml  check-markdown-task.yml  check-markdownlint.yml  check-npm-task.yml  check-poetry-task.yml  check-prettier-formatting-task.yml  check-python-task.yml  check-shell-task.yml  check-sync.yml  check-taskfiles.yml  check-workflows-task.yml  check-yaml-task.yml  spell-check-task.yml  sync-labels-npm.yml  sync-labels.yml  test-install-script.yml  test-python-poetry-task.yml
docs/: CONTRIBUTING.md  development.md
docs/contributor-guide/: beta-testing.md  issues.md  pull-requests.md
documentation-templates/: README.md
etc/: sync.sh
issue-templates/: README.md
issue-templates/forms/: README.md
issue-templates/minimal/: README.md
issue-templates/template-choosers/: README.md
managed-templates/golang/: Taskfile.yml  setup-golang.yml
other/clang-format-configuration/: .clang-format  README.md  notes.md
workflow-templates/: README.md  check-action-metadata-task.md  check-action-metadata-task.yml  check-certificates.md  check-certificates.yml  check-files-task.md  check-files-task.yml  check-general-formatting-task.md  check-general-formatting-task.yml  check-go-dependencies-task.md  check-go-dependencies-task.yml  check-go-task.md  check-go-task.yml  check-javascript-task.md  check-javascript-task.yml  check-license.md  check-license.yml  check-markdown-task.md  check-markdown-task.yml  check-mkdocs-task.md  check-mkdocs-task.yml  check-npm-dependencies-task.md  check-npm-dependencies-task.yml  check-npm-task.md  check-npm-task.yml  check-poetry-task.md  check-poetry-task.yml  check-prettier-formatting-task.md  check-prettier-formatting-task.yml  check-python-task.md  check-python-task.yml  check-shell-task.md  check-shell-task.yml  check-taskfiles.md  check-taskfiles.yml  check-toc-task.md  check-toc-task.yml  check-workflows-task.md  check-workflows-task.yml  check-yaml-task.md  (+29 more)
workflow-templates/assets/poetry/: README.md  pyproject.toml
(+1341 files in other folders)
