[tool.black]
line-length = 120

[tool.poetry]
name = "tooling-project-assets"
version = "0.0.0"
description = ""
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
yamllint = "^v1.35.1"
codespell = "^2.2.6"
black = "^24.3"
flake8 = "^7.0.0"
pep8-naming = "^0.14.0"
pytest = "^8.1.1"
GitPython = "^3.1.42"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
