[tool.black]
line-length = 120

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.dev-dependencies]
yamllint = "^v1.37.1"
codespell = "^2.4.1"
black = "^25.1"
flake8 = "^7.2.0"
pep8-naming = "^0.15.1"
pytest = "^8.4.1"
GitPython = "^3.1.44"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
